--- a/app/src/main/res/layout/buy_inputs_home.xml
+++ b/app/src/main/res/layout/buy_inputs_home.xml
@@ -104,6 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:background="@color/white"
+            android:visibility="gone"
             app:itemIconTint="@color/transparent"
             app:labelVisibilityMode="auto"
             app:layout_constraintBottom_toBottomOf="parent"
