Changes in the xml of my cart

--- a/app/src/main/res/layout/buy_inputs_my_cart.xml
+++ b/app/src/main/res/layout/buy_inputs_my_cart.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/windowBackground"
+    android:background="#FBFBFB"
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical">
@@ -20,7 +20,7 @@
         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/ic_shopping_cart_18dp"
+            app:srcCompat="@drawable/ic_shopping_cart_18dp"
             app:tint="@color/grey_dark" />
 
         <TextView
@@ -70,7 +70,46 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
+                <LinearLayout
+                    android:id="@+id/location_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_margin="@dimen/dimen_10dp"
+                    android:background="@drawable/round_rectangle_bg_light_gray"
+                    android:padding="@dimen/dimen_10dp">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/dimen_10dp"
+                        app:srcCompat="@drawable/ic_pin"
+                        android:layout_marginLeft="@dimen/dimen_10dp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_marginStart="@dimen/dimen_20dp"
+                        android:layout_marginLeft="@dimen/dimen_20dp">
+                        <TextView
+                            android:id="@+id/default_delivery_location1_tv"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="Deliver at : Home"
+                            android:textColor="#222"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:layout_marginBottom="@dimen/dimen_5dp"/>
+                        <TextView
+                            android:id="@+id/default_delivery_location2_tv"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="Nakibinge Rd, Kampala, Uganda"
+                            android:textColor="#222"
+                            android:textSize="16sp"/>
+                    </LinearLayout>
 
+
+                </LinearLayout>
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/cart_items_recycler"
                     android:layout_width="match_parent"
@@ -78,101 +117,11 @@
                     android:layout_margin="5dp"
                     android:layout_weight="1" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:background="@color/white"
-                    android:orientation="vertical"
-                    android:padding="12dp">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/subtotal"
-                            android:textColor="@color/textColorSecondaryDark"
-                            android:textSize="15sp" />
-
-                        <TextView
-                            android:id="@+id/cart_item_subtotal_price"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="end"
-                            android:text="UGX00.0"
-                            android:textColor="@color/colorAccentGreen"
-                            android:textSize="15sp"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/discount"
-                            android:textColor="@color/textColorSecondaryDark"
-                            android:textSize="15sp" />
-
-                        <TextView
-                            android:id="@+id/cart_item_discount_price"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="end"
-                            android:text="UGX00.0"
-                            android:textColor="@color/colorAccentGreen"
-                            android:textSize="15sp"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/total"
-                            android:textColor="@color/textColorSecondaryDark"
-                            android:textSize="15sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/cart_item_total_price"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="end"
-                            android:text="UGX00.0"
-                            android:textColor="@color/colorAccentGreen"
-                            android:textSize="15sp"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dimen_10dp"
-            android:background="@drawable/rounded_corners_button"
-            android:backgroundTint="#E24C4B"
-           android:layout_marginBottom="@dimen/dimen_10dp">
+
 
 
 
@@ -180,113 +129,106 @@
                 android:id="@+id/btn_save"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:background="@color/transparent"
+                android:background="@drawable/round_button_red"
                 android:text="clear cart"
+                android:textStyle="bold"
                 android:textAllCaps="true"
                 android:textColor="@color/white"
-                android:textSize="@dimen/button_text_size" />
+                android:textSize="@dimen/button_text_size"
+                android:padding="@dimen/dimen_8dp"
+                android:layout_margin="@dimen/dimen_10dp"
+                android:drawableEnd="@drawable/ic_right_arrow"/>
 
-            <ImageView
-                android:layout_width="30dip"
-                android:layout_height="30dip"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="right|center_vertical"
-                android:layout_margin="10dip"
-                android:src="@drawable/ic_right_arrow">
-            </ImageView>
-        </FrameLayout>
 
-        <androidx.cardview.widget.CardView
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/black"
-            android:layout_marginBottom="@dimen/dimen_10dp">
+            android:padding="@dimen/dimen_5dp"
+            android:background="#222222"
+            android:layout_margin="@dimen/dimen_10dp">
             <TextView
+                android:id="@+id/promo_text"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Add items"
-                android:textAlignment="center"
-                android:textColor="@color/white"/>
+                android:layout_gravity="center_vertical"
+                android:text="Add items worth UGX 550.00 \n \n more for FREE delivery"
+                android:layout_margin="8dp"
+                android:textColor="@color/white"
+                android:textSize="17sp"/>
+
             <ImageView
+                android:id="@+id/promo_image"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_shipping_car"
-                android:layout_gravity="end"/>
+                android:layout_gravity="end"
+                android:layout_margin="15dp"
+                app:srcCompat="@drawable/ic_shipping_car" />
 
-        </androidx.cardview.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cart_bottom_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/topcornerscurved"
-            android:orientation="vertical"
-            android:elevation="@dimen/dimen_10dp"
-            android:layout_marginBottom="@dimen/dimen_10dp">
 
-            <RelativeLayout
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp">
+                android:padding="10dp"
+                android:elevation="@dimen/dimen_10dp"
+                android:background="@drawable/topcornerscurved">
+            <LinearLayout
+                android:id="@+id/layout_total_payment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="8dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Total Payment"
+                android:textColor="#515C6F"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:layout_marginBottom="@dimen/dimen_5dp"/>
 
+                <TextView
+                    android:id="@+id/cart_item_total_price"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="UGX 00.0"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:textColor="@color/colorAccentGreen"/>
 
-                <Button
-                    android:id="@+id/cart_pair_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="10dp"
-                    android:background="@drawable/rounded_corners_button_gray"
-                    android:text="@string/pair"
-                    android:textAlignment="center"
-                    android:textAllCaps="false"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    android:gravity="center"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginLeft="10dp"
-                    />
-
-
-                <FrameLayout
-                    android:layout_width="209dp"
-                    android:layout_height="30dp"
-                    android:layout_alignLeft="@id/cart_pair_btn"
-                    android:layout_marginLeft="173dp"
-                    android:layout_marginTop="@dimen/dimen_10dp"
-                    android:background="@drawable/rounded_corners_button">
-
+            </LinearLayout>
 
                     <Button
                         android:id="@+id/cart_checkout_btn"
-                        android:layout_width="214dp"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"
+                        android:layout_width="match_parent"
                         android:layout_weight="1"
-                        android:background="@color/transparent"
+                        android:padding="8dp"
+                        android:layout_margin="8dp"
+                        android:drawableEnd="@drawable/ic_right_arrow"
+                        android:background="@drawable/round_button_dark_green"
                         android:text="Checkout"
                         android:textAllCaps="true"
                         android:textColor="@color/white"
+                        android:textStyle="bold"
                         android:textSize="@dimen/button_text_size" />
 
-                    <ImageView
-                        android:layout_width="30dip"
-                        android:layout_height="30dip"
-                        android:layout_alignParentRight="true"
-                        android:layout_gravity="right|center_vertical"
-                        android:layout_margin="10dip"
-                        android:src="@drawable/ic_right_arrow"></ImageView>
-                </FrameLayout>
 
-            </RelativeLayout>
+
+            </LinearLayout>
 
             <!--<LinearLayout
                 android:layout_width="match_parent"
@@ -329,7 +271,6 @@
 
             </LinearLayout>-->
 
-        </androidx.cardview.widget.CardView>
 
 
     </LinearLayout>
