--- a/app/src/main/res/layout/buy_inputs_home.xml
+++ b/app/src/main/res/layout/buy_inputs_home.xml
@@ -65,6 +65,7 @@
                     app:layout_constraintGuide_percent="0.85" />
 
                 <ImageView
+                    android:id="@+id/buy_inputs_search_icon"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:padding="10dp"
