--- a/app/src/main/res/layout/buy_inputs_card_cart_items.xml
+++ b/app/src/main/res/layout/buy_inputs_card_cart_items.xml
@@ -6,61 +6,21 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_margin="5dp"
-    android:background="@color/white" >
+    android:background="@drawable/input_shapes_crops_card" >
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="5dp"
-        android:layout_marginTop="5dp">
-
-        <TextView
-            android:id="@+id/cart_item_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxLines="2"
-            android:text="@string/product_title"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/textColorSecondaryDark"
-            android:layout_marginEnd="5dp"
-            android:layout_marginStart="5dp" />
-
-        <TextView
-            android:id="@+id/cart_item_category"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:layout_marginTop="3dp"
-            android:text="@string/category"
-            android:textSize="14sp"
-            android:textColor="@color/textColorSecondaryLight"
-            android:layout_marginEnd="5dp"
-            android:layout_marginStart="5dp" />
-
-    </LinearLayout>
-
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:background="@color/dividerLight" />
-
-
-    <LinearLayout
+        android:id="@+id/cart_item_viewBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:clickable="true"
         android:gravity="center_vertical" >
 
         <ImageView
             android:id="@+id/cart_item_cover"
             android:layout_width="80dp"
             android:layout_height="120dp"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:src="@drawable/placeholder"
             android:scaleType="fitCenter" />
 
@@ -74,7 +34,35 @@
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="10dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginBottom="10dp">
+                <TextView
+                    android:id="@+id/cart_item_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="2"
+                    android:layout_weight=".1"
+                    android:text="@string/product_title"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorPrimary" />
 
+
+                <ImageView
+                    android:id="@+id/cart_item_removeBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".9"
+                    app:srcCompat="@drawable/ic_close"
+                    android:gravity="end"
+                    android:textColor="@color/colorAccentGreen" />
+
+
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -92,17 +80,19 @@
                     android:id="@+id/cart_item_base_price"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="UGX00.0"
+                    android:text="UGX 00.0"
                     android:textSize="14sp"
+                    android:textStyle="bold"
                     android:gravity="end"
-                    android:textColor="@color/textColorSecondaryDark" />
+                    android:textColor="@color/colorPrimary" />
 
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/cart_item_attributes_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -136,10 +126,10 @@
                         android:id="@+id/cart_item_quantity_minusBtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_chevron_left"
+                        app:srcCompat="@drawable/ic_minuse_black_24dp"
                         android:scaleType="centerInside"
                         android:tint="@color/white"
-                        android:background="@drawable/rounded_corners_button_green" />
+                        android:background="@drawable/rounded_cornor_bg" />
 
                     <TextView
                         android:id="@+id/cart_item_quantity"
@@ -154,39 +144,15 @@
                         android:id="@+id/cart_item_quantity_plusBtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_chevron_right"
+                        app:srcCompat="@drawable/ic_add_white_24dp"
                         android:scaleType="centerInside"
                         android:tint="@color/white"
-                        android:background="@drawable/rounded_corners_button_green" />
+                        android:background="@drawable/round_button_dark_green" />
 
                 </LinearLayout>
 
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="10dp" >
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/total_price"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/textColorSecondaryDark" />
-
-                <TextView
-                    android:id="@+id/cart_item_sub_price"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="UGX00.0"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    android:gravity="end"
-                    android:textColor="@color/colorAccentGreen" />
-
-            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -218,44 +184,7 @@
     </LinearLayout>
 
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="5dp"
-        android:background="@color/dividerLight" />
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical|start"
-        android:padding="10dp">
-
-        <Button
-            android:id="@+id/cart_item_viewBtn"
-            android:layout_width="80dp"
-            android:layout_height="25dp"
-            android:text="@string/view"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:background="@drawable/rounded_corners_button_gray" />
-
-        <TextView
-            android:textAlignment="center"
-            android:gravity="center"
-            android:text="@string/remove"
-            android:id="@+id/cart_item_removeBtn"
-            android:layout_width="80dp"
-            android:layout_height="25dp"
-            android:src="@drawable/ic_delete_forever"
-            android:scaleType="fitCenter"
-            android:tint="@color/white"
-            android:layout_marginStart="10dp"
-            android:background="@color/transparent"
-            android:layout_marginLeft="10dp" />
-
-    </LinearLayout>
 
 
 </LinearLayout>
