--- a/app/src/main/res/layout/buy_inputs_my_cart.xml
+++ b/app/src/main/res/layout/buy_inputs_my_cart.xml
@@ -20,7 +20,7 @@
         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/ic_shopping_cart_18dp"
+            app:srcCompat="@drawable/ic_shopping_cart_18dp"
             app:tint="@color/grey_dark" />
 
         <TextView
@@ -72,7 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_10dp"
-                android:src="@drawable/ic_pin"
+                app:srcCompat="@drawable/ic_pin"
                 android:layout_marginLeft="@dimen/dimen_10dp" />
             <LinearLayout
                 android:layout_width="match_parent"
@@ -172,7 +172,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:layout_margin="15dp"
-                android:src="@drawable/ic_shipping_car" />
+                app:srcCompat="@drawable/ic_shipping_car" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
