--- a/app/src/main/res/layout/buy_inputs_my_cart.xml
+++ b/app/src/main/res/layout/buy_inputs_my_cart.xml
@@ -59,7 +59,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_marginTop="?actionBarSize"
-        android:layout_marginBottom="?actionBarSize">
+        android:layout_marginBottom="10dp">
         <LinearLayout
             android:id="@+id/location_layout"
             android:layout_width="match_parent"
