--- a/app/src/main/res/layout/buy_inputs_banner_style_1.xml
+++ b/app/src/main/res/layout/buy_inputs_banner_style_1.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:custom="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:paddingLeft="@dimen/dimen_10dp"
+    android:paddingRight="@dimen/dimen_10dp"
     android:layout_height="@dimen/banner_height">
 
 
