--- a/app/src/main/res/layout/buy_inputs_my_cart.xml
+++ b/app/src/main/res/layout/buy_inputs_my_cart.xml
@@ -121,7 +121,7 @@
                     android:layout_weight="1" />
 
                 <Button
-                    android:id="@+id/btn_save"
+                    android:id="@+id/btn_clear_cart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/round_button_red"
