--- a/app/src/main/res/layout/buy_inputs_address.xml
+++ b/app/src/main/res/layout/buy_inputs_address.xml
@@ -4,29 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/windowBackground"
-    android:clickable="true"
-    android:focusable="true"
-    android:id="@+id/parent"
-    android:orientation="vertical">
-
+    android:layout_marginTop="?attr/actionBarSize">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@+id/parent"
+        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/autocomplete_fragmentlaout"
-        android:orientation="vertical" >
-
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            >
-
-
-
+            android:orientation="vertical">
 
             <fragment
                 android:id="@+id/map"
@@ -38,19 +30,18 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/dimen_10dp"
                 android:gravity="top"
                 android:orientation="vertical"
-                android:layout_marginLeft="@dimen/dimen_20dp"
-                android:layout_marginRight="@dimen/dimen_20dp"
-                android:paddingTop="@dimen/dimen_5dp"
-                >
+                android:paddingTop="@dimen/dimen_5dp">
 
                 <EditText
                     android:id="@+id/name"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/input_field_height"
-                    android:background="@drawable/rounded_corners_edittext_light"
+                    android:layout_height="44dp"
+                    android:background="@drawable/edittext_corner"
                     android:drawablePadding="15dp"
+                    android:fontFamily="@font/josefin_sans"
                     android:gravity="start|center_vertical"
                     android:hint="@string/Receivername"
                     android:inputType="textNoSuggestions"
@@ -58,28 +49,25 @@
                     android:paddingEnd="15dp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/textColorSecondary"
-                    android:fontFamily="@font/josefin_sans"
-                    android:textColorHint="@color/textColorPrimaryLight"
-                    />
+                    android:textColorHint="@color/textColorPrimaryLight" />
 
                 <EditText
                     android:id="@+id/contact"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/input_field_height"
+                    android:layout_height="44dp"
                     android:layout_marginTop="@dimen/input_field_margin"
-                    android:background="@drawable/rounded_corners_edittext_light"
+                    android:background="@drawable/edittext_corner"
                     android:drawablePadding="15dp"
+                    android:fontFamily="@font/josefin_sans"
                     android:gravity="start|center_vertical"
                     android:hint="@string/Receivercontact_no"
-                    android:inputType="phone"
                     android:imeOptions="actionDone"
+                    android:inputType="phone"
                     android:paddingStart="15dp"
                     android:paddingEnd="15dp"
                     android:textAlignment="viewStart"
                     android:textColor="@color/textColorSecondary"
-                    android:fontFamily="@font/josefin_sans"
-                    android:textColorHint="@color/textColorPrimaryLight"
-                    />
+                    android:textColorHint="@color/textColorPrimaryLight" />
 
             </LinearLayout>
 
@@ -90,82 +78,73 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="40dp"
                 android:gravity="center"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
-
-                <FrameLayout
-                    android:layout_width="200dp"
-                    android:layout_height="40dp"
-                    android:orientation="horizontal"
-                    >
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/save_address_btn"
-                        android:layout_width="180dp"
-                        android:layout_height="30dp"
-                        android:layout_marginLeft="@dimen/dimen_5dp"
-                        android:layout_marginTop="@dimen/dimen_5dp"
-                        android:layout_marginBottom="@dimen/dimen_5dp"
-                        android:paddingLeft="50dp"
-                        android:background="@drawable/rounded_corner_map"
-                        android:gravity="center_vertical"
-                        android:paddingTop="0dp"
-                        android:paddingBottom="0dp"
-                        android:text="@string/save_address"
+                        android:layout_width="166dp"
+                        android:layout_height="37dp"
+                        android:background="@drawable/crop_card_button_green"
                         android:fontFamily="@font/josefin_sans"
+                        android:gravity="center"
+                        android:paddingTop="3dp"
+                        android:text="@string/save_address"
+                        android:textAllCaps="true"
+                        android:textColor="@android:color/white"
                         android:textSize="16sp"
-                        android:textColor="@android:color/white" />
-
+                        android:textStyle="bold" />
 
                     <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_gravity="center_vertical"
-                        android:src="@drawable/ic_add_icon" />
-                </FrameLayout>
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        app:srcCompat="@drawable/ic_arrow" />
+
+                </LinearLayout>
 
                 <ImageView
                     android:id="@+id/imageMarker"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/add_marker" />
+                    android:layout_marginTop="@dimen/margin_15"
+                    app:srcCompat="@drawable/ic_pin" />
 
             </LinearLayout>
 
-
-
         </FrameLayout>
 
-
     </LinearLayout>
-
 
     <LinearLayout
         android:id="@+id/autocomplete_fragmentlaout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/dimen_5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/parent"
         android:background="@color/white"
-        android:orientation="vertical">
-
-
+        android:orientation="vertical"
+        android:paddingTop="@dimen/dimen_5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dimen_20dp"
-            android:layout_marginRight="@dimen/dimen_20dp"
-            android:background="@drawable/rounded_corners_button_green"
-            android:layout_marginBottom="@dimen/dimen_5dp"
-            >
+            android:layout_marginLeft="@dimen/dimen_10dp"
+            android:layout_marginRight="@dimen/dimen_10dp"
+            android:layout_marginBottom="@dimen/dimen_10dp"
+            android:background="@drawable/rounded_corners_button_green">
 
-            <fragment android:id="@+id/autocomplete_fragment"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/input_field_height"
-                android:fontFamily="@font/josefin_sans"
+            <fragment
+                android:id="@+id/autocomplete_fragment"
                 android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-                />
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:background="@drawable/edittext_corner" />
 
         </LinearLayout>
 
