--- a/app/src/main/res/layout/buy_inputs_address.xml
+++ b/app/src/main/res/layout/buy_inputs_address.xml
@@ -81,6 +81,7 @@
                 android:orientation="vertical">
 
                 <LinearLayout
+                    android:id="@+id/save_address_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
