--- a/app/src/main/res/layout/buy_inputs_nearbymerchants.xml
+++ b/app/src/main/res/layout/buy_inputs_nearbymerchants.xml
@@ -20,7 +20,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/merchants_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:paddingTop="?attr/actionBarSize" />
 
     </androidx.core.widget.NestedScrollView>
 
