--- a/app/src/main/res/layout/buy_inputs_card_addresses.xml
+++ b/app/src/main/res/layout/buy_inputs_card_addresses.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:layout_margin="2dp"
-    android:background="@color/white"
-    card_view:cardCornerRadius="2dp"
-    card_view:cardElevation="0dp"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    android:background="#FBFBFB"
+    card_view:cardCornerRadius="4dp"
     card_view:cardPreventCornerOverlap="false"
-    card_view:cardUseCompatPadding="true"
     android:id="@+id/cardview_perant" >
 
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:padding="10dp">
 
         <RadioButton
             android:id="@+id/default_address_rb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_margin="10dp" />
+            android:buttonTint="@color/colorPrimary"/>
 
         <!--<CheckBox
             android:id="@+id/makeDefaultAddress_cb"
@@ -33,11 +33,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/default_address_rb"
-            android:gravity="center_vertical"
             android:orientation="vertical"
-            android:padding="5dp"
+            android:padding="7dp"
             android:layout_toRightOf="@+id/default_address_rb">
 
             <TextView
@@ -46,51 +45,57 @@
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:text="@string/full_name"
-                android:textColor="@color/textColorSecondaryDark"
-                android:textSize="14sp" />
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/address_details"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
+                android:layout_marginTop="6dp"
                 android:maxLines="2"
                 android:text="@string/address"
                 android:textColor="@color/textColorSecondaryDark"
-                android:textSize="14sp" />
+                android:textSize="16sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
+                <Button
+                    android:id="@+id/edit_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="15dp"
+                    android:paddingEnd="10dp"
+                    android:background="@drawable/round_button_dark_green"
+                    android:text="@string/bt_edit"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:drawableEnd="@drawable/ic_right_chevron"/>
+
+                <Button
+                    android:id="@+id/delete_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_weight="1"
+                    android:paddingEnd="10dp"
+                    android:background="@drawable/round_button_red"
+                    android:text="@string/bt_delete"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:drawableEnd="@drawable/ic_right_chevron" />
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:gravity="center"
-            android:layout_marginEnd="10dp"
-            android:orientation="vertical"
-            android:layout_marginRight="10dp">
 
-            <ImageButton
-                android:id="@+id/edit_address"
-                android:layout_width="22dp"
-                android:layout_height="22dp"
-                android:background="@android:color/transparent"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_edit_profile"
-                android:tint="@color/colorAccentGreen" />
-
-            <ImageButton
-                android:id="@+id/delete_address"
-                android:layout_width="22dp"
-                android:layout_height="22dp"
-                android:layout_marginTop="10dp"
-                android:layout_below="@id/edit_address"
-                android:background="@android:color/transparent"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_delete_forever"
-                android:tint="@color/colorAccentGreen" />
-        </LinearLayout>
 
 
     </RelativeLayout>
