--- a/app/src/main/res/layout/buy_inputs_my_cart.xml
+++ b/app/src/main/res/layout/buy_inputs_my_cart.xml
@@ -58,8 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginTop="?actionBarSize"
-        android:layout_marginBottom="?actionBarSize">
+        android:layout_marginTop="?actionBarSize">
         <LinearLayout
             android:id="@+id/location_layout"
             android:layout_width="match_parent"
@@ -139,7 +138,7 @@
                 android:textSize="@dimen/button_text_size"
                 android:padding="@dimen/dimen_8dp"
                 android:layout_margin="@dimen/dimen_10dp"
-                android:drawableEnd="@drawable/ic_right_arrow"/>
+                android:drawableEnd="@drawable/ic_right_chevron"/>
 
 
 
@@ -220,7 +219,7 @@
                         android:layout_weight="1"
                         android:padding="8dp"
                         android:layout_margin="8dp"
-                        android:drawableEnd="@drawable/ic_right_arrow"
+                        android:drawableEnd="@drawable/ic_right_chevron"
                         android:background="@drawable/round_button_dark_green"
                         android:text="Checkout"
                         android:textAllCaps="true"
