--- a/app/src/main/res/layout/buy_inputs_address.xml
+++ b/app/src/main/res/layout/buy_inputs_address.xml
@@ -103,7 +103,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        app:srcCompat="@drawable/ic_arrow" />
+                        app:srcCompat="@drawable/ic_arrow"
+                        tools:ignore="VectorDrawableCompat" />
 
                 </LinearLayout>
 
@@ -112,7 +113,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_15"
-                    app:srcCompat="@drawable/ic_pin" />
+                    app:srcCompat="@drawable/ic_pin"
+                    tools:ignore="VectorDrawableCompat" />
 
             </LinearLayout>
 
