--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:layout_marginLeft="20dp"
@@ -60,8 +61,9 @@
             android:layout_marginLeft="15dp"
             android:gravity="center_vertical"
             android:padding="8dp"
-            android:src="@drawable/arrow_left_black"
-            android:visibility="gone" />
+            app:srcCompat="@drawable/arrow_left_white_24dp"
+            android:visibility="gone"
+            app:tint="@color/black" />
 
         <ImageView
             android:id="@+id/ivGroupIndicator"
