--- a/app/src/main/res/layout/fragment_add_crop_notes.xml
+++ b/app/src/main/res/layout/fragment_add_crop_notes.xml
@@ -81,7 +81,7 @@
                                 android:layout_gravity="center"
                                 android:layout_marginEnd="8dp"
                                 android:layout_marginRight="10dp"
-                                android:src="@drawable/ic_calendar_add" />
+                                android:src="@drawable/ic_calendar" />
 
                         </RelativeLayout>
                     </LinearLayout>
