--- a/app/src/main/res/layout/fragment_crop_harvest.xml
+++ b/app/src/main/res/layout/fragment_crop_harvest.xml
@@ -97,7 +97,7 @@
                             android:layout_marginRight="10dp"
                             android:layout_centerVertical="true"
                             android:layout_gravity="center"
-                            android:src="@drawable/ic_calendar_add" />
+                            android:src="@drawable/ic_calendar" />
 
                     </RelativeLayout>
                 </LinearLayout>
