--- a/app/src/main/res/layout/notification_card.xml
+++ b/app/src/main/res/layout/notification_card.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="3dp"
@@ -47,7 +48,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:focusable="false"
-            android:src="@drawable/done_event"
+            app:srcCompat="@drawable/ic_checked"
             />
 
     </LinearLayout>
