Re-designed buy_inputs_card_merchant and buy_inputs_merchant_product_card respectively

--- a/app/src/main/res/layout/buy_inputs_merchant_product_card.xml
+++ b/app/src/main/res/layout/buy_inputs_merchant_product_card.xml
@@ -1,37 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#F0F0F0"
+    app:cardCornerRadius="5dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="7"
-        android:orientation="horizontal">
+        android:background="#F0F0F0"
+        android:orientation="horizontal"
+        android:padding="@dimen/dimen_10dp">
 
         <TextView
-            android:id="@+id/prductname"
+            android:id="@+id/productName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="4.5"
-            android:gravity="start"
-            android:text="Product name"
-            android:textSize="12sp"
-            android:fontFamily="@font/josefin_sans"
-            android:textAllCaps="false"
-            />
+            android:ellipsize="end"
+            android:gravity="center|start"
+            android:maxLines="1"
+            android:text="Fangocil 20 X 250GM"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline9"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/productprice"
+            android:id="@+id/productPrice"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2.5"
-            android:text="UGX 2000"
-            android:textSize="12sp"
-            android:fontFamily="@font/josefin_sans"
-            android:textAllCaps="false"
-            />
+            android:gravity="center|start"
+            android:text="UGX - 17,000"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/dimen_14sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline9"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
 
-    </LinearLayout>
-</LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
