--- a/app/src/main/res/layout/buy_inputs_card_merchants.xml
+++ b/app/src/main/res/layout/buy_inputs_card_merchants.xml
@@ -1,189 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/tools"
-    android:background="@color/white"
-    android:layout_margin="3dp"
-    card_view:cardElevation="0dp"
-    card_view:cardCornerRadius="2dp"
-    card_view:cardUseCompatPadding="true"
-    card_view:cardPreventCornerOverlap="false"
-    android:id="@+id/cardView">
+    android:layout_marginStart="@dimen/margin_10"
+    android:layout_marginTop="@dimen/dimen_5dp"
+    android:layout_marginEnd="@dimen/margin_10"
+    android:layout_marginBottom="@dimen/dimen_5dp"
+    android:background="@color/White"
+    app:cardCornerRadius="3dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
         android:orientation="vertical">
-
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="@dimen/dimen_5dp"
-            android:layout_marginEnd="@dimen/dimen_5dp"
-            android:layout_marginStart="@dimen/dimen_5dp" >
+            android:background="@android:color/white"
+            android:orientation="horizontal"
+            android:padding="@dimen/dimen_10dp">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
+            <ImageView
+                android:layout_width="18dp"
+                android:layout_height="17dp"
+                android:layout_gravity="center_vertical"
+                app:srcCompat="@drawable/ic_home_nearby_merchants" />
+
+            <TextView
+                android:id="@+id/text_businessName"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:layout_marginTop="@dimen/dimen_5dp" >
-
-                <com.myfarmnow.myfarmcrop.customs.CircularImageView
-                    android:id="@+id/shop_icon_image"
-                    android:layout_width="@dimen/dimen_30dp"
-                    android:layout_height="@dimen/dimen_30dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/shop"
-                    app:border_width="0dp" />
-
-                <TextView
-                    android:id="@+id/text_businessName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:text="Bukooola Inputs shop"
-                    android:textSize="16sp"
-                    android:layout_marginLeft="40dp"
-                    android:fontFamily="@font/josefin_sans"
-                    android:textStyle="bold"
-                    android:layout_alignLeft="@+id/shop_icon_image"
-                    android:textColor="@color/textColorSecondary" />
-
-
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:layout_marginTop="@dimen/dimen_5dp"
-                android:layout_marginBottom="@dimen/dimen_5dp">
-
-                <com.myfarmnow.myfarmcrop.customs.CircularImageView
-                    android:id="@+id/location_icon_image"
-                    android:layout_width="@dimen/dimen_30dp"
-                    android:layout_height="@dimen/dimen_30dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/location_green"
-                    app:border_width="0dp" />
-
-                <TextView
-                    android:id="@+id/text_location_address"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:text="Nansana, Kampala"
-                    android:textSize="16sp"
-                    android:layout_marginLeft="40dp"
-                    android:fontFamily="@font/josefin_sans"
-                    android:textStyle="bold"
-                    android:layout_alignLeft="@+id/location_icon_image"
-                    android:textColor="@color/textColorSecondary" />
-
-
-
-            </RelativeLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="@android:color/black"/>
-
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/product_order_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="@dimen/dimen_20dp"
-                android:layout_marginTop="5dp"/>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="@android:color/black"/>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:layout_marginTop="2dp" >
-
-                <TextView
-                    android:id="@+id/abc"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:text="@string/total"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/josefin_sans"
-                    android:textStyle="bold"
-                    android:textColor="@color/textColorSecondary" />
-
-                <TextView
-                    android:id="@+id/order_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:text="UGX 52,0000"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/josefin_sans"
-                    android:textStyle="bold"
-                    android:textColor="@color/textColorSecondary"
-                    android:textAlignment="textEnd"
-                    android:gravity="end"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true" />
-
-            </RelativeLayout>
-
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/dimen_20dp"
+                android:layout_marginEnd="@dimen/margin_10"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="Home"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline11"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:layout_margin="5dp"
-            android:padding="4dp"
+            android:background="@android:color/white"
+            android:orientation="horizontal"
+            android:padding="@dimen/dimen_10dp">
 
-            >
+            <ImageView
+                android:layout_width="17dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center_vertical"
+                app:srcCompat="@drawable/ic_location_nearby_merchants" />
+
+            <TextView
+                android:id="@+id/text_location_address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/dimen_20dp"
+                android:layout_marginEnd="@dimen/margin_10"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="Kampala, 9B Kawaala Rd, Kampala"
+                android:textColor="#515C6F"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline11"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/product_order_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_marginEnd="@dimen/margin_10" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_marginEnd="@dimen/margin_10"
+            android:background="@android:color/white"
+            android:orientation="horizontal"
+            android:padding="@dimen/dimen_10dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:gravity="center|start"
+                android:maxLines="1"
+                android:text="Total Price"
+                android:textColor="@color/colorPrimary"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline9"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/order_price"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/josefin_sans"
+                android:gravity="center|start"
+                android:text="UGX - 51,000"
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/dimen_14sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/guideline9"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.5" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_5dp"
+            android:background="@color/White"
+            android:orientation="horizontal"
+            android:padding="@dimen/dimen_10dp">
 
             <Button
                 android:id="@+id/select_btn"
                 android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_weight="0.5"
+                android:layout_height="32dp"
+                android:layout_marginEnd="@dimen/dimen_20dp"
+                android:background="@drawable/rectangular_green_solid"
                 android:text="Select"
-                android:textSize="16sp"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:background="@drawable/rounded_corners2_button_green"
-                android:layout_marginRight="@dimen/dimen_10dp"
-                android:fontFamily="@font/josefin_sans"/>
+                android:textColor="@android:color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.5" />
 
             <Button
                 android:id="@+id/ignore_btn"
-                android:layout_weight="0.5"
                 android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="@dimen/dimen_10dp"
+                android:layout_height="32dp"
+                android:layout_marginStart="@dimen/dimen_20dp"
+                android:background="@drawable/rectangular_black_solid"
                 android:text="Ignore"
-                android:textSize="16sp"
-                android:textAllCaps="false"
-                android:background="@drawable/rounded_corners_green_borded_button_white"
-                android:fontFamily="@font/josefin_sans"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true" />
+                android:textColor="@android:color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
